telemetry/derive/tests/ui_fail/not_execute.stderr
error: Function should be an `impl execute`
 --> tests/ui_fail/not_execute.rs:4:4
  |
4 | fn exequte(wsv: &WorldStateView) -> Result<(), ()> {
  |    ^^^^^^^
